# reactor

./: .gitignore  README.md
clipping/: README.md  pyproject.toml
clipping/src/clipping/: chat.py  chat_kick.py  cli.py  cut.py  ingest.py  score.py
clipping/tests/: test_chat_kick.py  test_score.py
reactor/: README.md  analyze_frames.py  combine_audio_video.py  extract_frames.py  generate_reactions.py  main.py  requirements.txt  text_to_speech.py
