[project]
name = "clipping"
version = "0.1.0"
description = "Live-stream highlight clipper. Watches Twitch channels, captures, detects highlights, cuts vertical short-form clips."
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
  "numpy>=1.26",
  "soundfile>=0.12",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
clipping = "clipping.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
